# comprehension

./: README.md  comprehension.cabal  stack.yaml
app/: Main.hs
